# runaway-coach

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  CLEANUP_REPORT.md  DEPLOYMENT_SUCCESS.md  IOS_AUTH_FIX.md  NUXT_WEB_APP_PROMPT.md  PRODUCTION_TESTED.md  QUICK_START.md  README.md  WORKFLOW_DIAGRAM.md  WORKFLOW_VISUAL.md  cloudbuild-hotfix.yaml  cloudbuild.yaml  dockerfile  pyproject.toml  requirements.txt  start.sh  test_anthropic.py  test_chat_endpoint.sh  test_connection.py  test_goal_schema.py  test_prod_api_key.sh  test_production_jwt.sh  test_quick_wins.py
api/: main.py
api/routes/: analysis.py  chat.py  enhanced_analysis.py  feedback.py  goals.py  langgraph.py  quick_wins.py
core/agents/: chat_agent.py  goal_strategy_agent.py  pace_optimization_agent.py  performance_agent.py  supervisor_agent.py  training_load_agent.py  vo2max_estimation_agent.py  weather_context_agent.py  workout_planning_agent.py
documentation/: AUTHENTICATION_GUIDE.md  CHAT_API_SPECS.md  CHAT_DEPLOYMENT.md  CHAT_QUICK_REFERENCE.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IOS_CLAUDE_PROMPT.md  IOS_FEATURE_SPECS.md  PRODUCTION_DEPLOYMENT.md  QUICK_WINS_IMPLEMENTATION.md  UPGRADE_PLAN.md  strava_erd.md
integrations/: __init__.py  supabase_client.py  supabase_queries.py  swift_interface.py
migrations/: 001_create_conversations_table.sql
models/: __init__.py  strava.py
scripts/: deploy_check.sh  generate_test_jwt.py  test_quick_wins_production.sh  visualize_workflow.py
tests/: test_connection_simple.py
utils/: __init__.py  auth.py  config.py  logger.py
(+2 files in other folders)
